<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:textSize="30dp"
        tools:ignore="SpUsage"></Button>

    <Button
        android:id="@+id/btn_start_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_second"
        android:textSize="30dp"
        tools:ignore="SpUsage"></Button>

    <Button
        android:id="@+id/btn_get_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_output"
        android:textSize="30dp"
        tools:ignore="SpUsage"></Button>


    <CheckBox
        android:id="@+id/cb_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cb_check"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:ignore="SpUsage"></CheckBox>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:src="@drawable/testimage3">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nevermind"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/lightgray"
        tools:ignore="SpUsage">

    </TextView>

</LinearLayout>